sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:20: error: not found: value currBase
        var currVal = nbBasesParcourir(currBase, currPos);
                                       ^NaiveBaseball:28: error: not found: value currBase
    move(currBase, idMax);
         ^NaiveBaseball:42: error: not found: value nbBases
    return nbBases - (color - base);
           ^